--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "angular": "^1.5.5",
     "angular-ui-router": "^0.3.0",
+    "lovefield": "^2.1.8",
     "pretty-bytes": "^3.0.1"
   },
   "devDependencies": {
