--- a/package.json
+++ b/package.json
@@ -1,32 +1,34 @@
 {
-  "name": "quiz",
-  "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
-  "scripts": {
-    "start": "electron main.js"
-  },
-  "author": "BlueOrc",
-  "contributors": [
-    {
-      "name": "Auro Mota",
-      "email": "auro@blueorc.com"
+    "name": "quiz",
+    "version": "1.0.0",
+    "description": "",
+    "main": "main.js",
+    "scripts": {
+        "dev": "http-server",
+        "start": "electron main.js"
+    },
+    "author": "BlueOrc",
+    "contributors": [
+        {
+            "name": "Auro Mota",
+            "email": "auro@blueorc.com"
+        }
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/auromota/atq-quiz"
+    },
+    "bugs": {
+        "url": "https://github.com/auromota/atq-quiz/issues"
+    },
+    "dependencies": {
+        "angular": "^1.5.5",
+        "angular-ui-router": "^0.3.0",
+        "http-server": "^0.9.0",
+        "lovefield": "^2.1.8",
+        "pretty-bytes": "^3.0.1"
+    },
+    "devDependencies": {
+        "electron-prebuilt": "^1.1.3"
     }
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/auromota/atq-quiz"
-  },
-  "bugs": {
-    "url": "https://github.com/auromota/atq-quiz/issues"
-  },
-  "dependencies": {
-    "angular": "^1.5.5",
-    "angular-ui-router": "^0.3.0",
-    "lovefield": "^2.1.8",
-    "pretty-bytes": "^3.0.1"
-  },
-  "devDependencies": {
-    "electron-prebuilt": "^1.1.3"
-  }
 }
