--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-    "name": "web-quiz",
-    "version": "1.0.0",
-    "description": "",
-    "scripts": {
-        "start": "http-server -o"
-    },
-    "author": "BlueOrc",
-    "contributors": [
-        {
-            "name": "Auro Mota",
-            "email": "auro@blueorc.com"
-        }
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/auromota/atq-quiz"
-    },
-    "bugs": {
-        "url": "https://github.com/auromota/atq-quiz/issues"
-    },
-    "dependencies": {
-        "angular": "^1.5.5",
-        "angular-ui-router": "^0.3.0",
-        "http-server": "^0.9.0",
-        "lovefield": "^2.1.8"
+  "name": "web-quiz",
+  "version": "1.0.0",
+  "description": "",
+  "scripts": {
+    "start": "http-server -o"
+  },
+  "author": "BlueOrc",
+  "contributors": [
+    {
+      "name": "Auro Mota",
+      "email": "auro@blueorc.com"
     }
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/auromota/atq-quiz"
+  },
+  "bugs": {
+    "url": "https://github.com/auromota/atq-quiz/issues"
+  },
+  "dependencies": {
+    "angular": "^1.5.5",
+    "angular-ui-router": "^0.3.0",
+    "bootstrap": "^3.3.6",
+    "http-server": "^0.9.0",
+    "lovefield": "^2.1.8"
+  }
 }
