--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-ui-router": "^0.3.0",
     "bootstrap": "^3.3.6",
     "http-server": "^0.9.0",
+    "jquery": "^2.2.4",
     "lovefield": "^2.1.8"
   }
 }
