--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   },
   "dependencies": {
     "angular": "^1.5.5",
+    "angular-sweetalert": "^1.1.0",
     "angular-ui-router": "^0.3.0",
     "bootstrap": "^3.3.6",
     "http-server": "^0.9.0",
     "jquery": "^2.2.4",
-    "lovefield": "^2.1.8"
+    "lovefield": "^2.1.8",
+    "sweetalert": "^1.1.3"
   }
 }
