--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "email": "auro@blueorc.com"
     }
   ],
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/auromota/atq-quiz"
@@ -29,5 +30,13 @@
     "jquery": "^2.2.4",
     "lovefield": "^2.1.8",
     "sweetalert": "^1.1.3"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-cdn-replace": "^0.3.0",
+    "gulp-html-replace": "^1.6.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-minify-html": "^1.0.6",
+    "gulp-uglify": "^1.5.3"
   }
 }
