--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-cdn-replace": "^0.3.0",
     "gulp-html-replace": "^1.6.1",
+    "gulp-jsonminify": "^1.0.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.6",
     "gulp-uglify": "^1.5.3"
